--- a/mern-recipes-factory/src/components/Main/styles.module.css
+++ b/mern-recipes-factory/src/components/Main/styles.module.css
@@ -1,22 +1,25 @@
 .navbar {
 	width: 100%;
 	height: 70px;
-	background-color: #3bb19b;
+	background-color: #F6C035;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	position: fixed;
 }
 
 .navbar h1 {
 	color: white;
-	font-size: 25px;
-	margin-left: 20px;
+	font-size: 30px;
+	margin-left: 10px;
+	font-family: Rockwell,Courier Bold,Courier,Georgia,Times,Times New Roman,serif;
+	margin-bottom: 2mm;
 }
 
 .white_btn {
 	border: none;
 	outline: none;
-	padding: 12px 0;
+	padding: 10px 0;
 	background-color: white;
 	border-radius: 20px;
 	width: 120px;
@@ -24,4 +27,74 @@
 	font-size: 14px;
 	cursor: pointer;
 	margin-right: 20px;
+	
+}
+.container {
+	background: url(background.jpg);
+	min-height: 1000px;
+	min-width: 100%;
+	background-position: center;
+	background-size: cover;
+
+}
+body {
+	height: auto;
+}
+
+.dropdown {
+	width: 200px;
+	user-select: none;
+	position: relative;
+	font-family: system-ui;
+	font-size: 13px;
+	text-align: center;
+	display: inline-block;  
+	
+  }
+  .dropdown .dropdown_btn {
+	padding: 10px 15px;
+	background: #fff;
+	font-weight: bold;
+	color: black;
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	justify-content: space-between;
+	border-radius: 15px;
+	align-content: center;
+	text-align: center;
+	opacity: 0.9;
+	
+  }
+  
+  .dropdown .dropdown_content {
+	position: absolute;
+	top: 110%;
+	left: 0;
+	padding: 5px;
+	background: #fff;
+	font-weight: bold;
+	box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+	font-weight: 500;
+	color: black;
+	width: 95%;
+	opacity: 0.8;
+  }
+  .dropdown .dropdown_content .dropdown_item {
+	padding: 10px;
+	cursor: pointer;
+	transition: all 0.2s;
+  }
+  .dropdown .dropdown_content .dropdown_item:hover {
+	background: #f4f4f4;
+  }
+  .allign1{
+	  position: fixed;
+	  top: 18px;
+	  right: 150px;
+  }
+  .allign2{
+	position: fixed;
+	top: 18px;
+	right: 360px;
 }
