--- a/mern-recipes-factory/src/components/Write_post/write_post.css
+++ b/mern-recipes-factory/src/components/Write_post/write_post.css
@@ -1,5 +1,28 @@
 .write {
-    padding-top: 50px;
+    background-image: url(img.jpg);
+    background-size: auto;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 100px;
+}
+
+
+.form_container {
+    width: 900px;
+    height: 800px;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
+
+.top {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .writeImg {
@@ -16,6 +39,7 @@
 
 .writeFormGroup {
     margin-left: 150px;
+    margin-right: 150px;
     display: flex;
     align-items: center;
 }
@@ -34,10 +58,15 @@
 }
 
 .writeInput {
-    font-size: 30px;
+    outline: none;
+    flex-direction: "row";
     border: none;
-    padding: 20px;
-    width: 70vw;
+    width: 500px;
+    padding: 50px;
+    border-radius: 10px;
+    background-color: #edf5f3;
+    margin: 5px 0;
+    font-size: 14px;
 }
 
     .writeInput:focus {
