write a recipe form modified

--- a/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
+++ b/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
@@ -1,4 +1,4 @@
-.write {
+/*.write {
     background-image: url(img.jpg);
     background-size: auto;
     border-top-left-radius: 10px;
@@ -78,6 +78,72 @@
     height: 100vh;
 }
 
+.writeSubmit {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    color: white;
+    background-color: teal;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}*/
+
+.write {
+    background: url(img.jpg);
+    min-height: 1000px;
+    min-width: 100%;
+    background-position: center;
+    background-size: cover;
+    z-index: -2;
+}
+
+.writeImg {
+    margin-left: 150px;
+    width: 70vw;
+    height: 250px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.writeForm {
+    position: center;
+    margin-top: 50px;
+}
+
+.writeFormGroup {
+    margin-left: 150px;
+    display: flex;
+}
+
+
+.writeInput {
+    font-size: 30px;
+    border: none;
+    padding: 20px;
+    width: 70vw;
+    background-color: antiquewhite;
+}
+.writeInput1 {
+    font-size: 30px;
+    border: none;
+    width: 70vw;
+}
+
+    .writeInput:focus {
+        outline: none;
+    }
+
+.writeText {
+    font-size: 20px;
+    height: 100px;
+    background-color: antiquewhite;
+}
+.writeText1 {
+    font-size: 20px;
+}
 .writeSubmit {
     position: absolute;
     top: 20px;
