--- a/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
+++ b/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
@@ -1,96 +1,3 @@
-/*.write {
-    background-image: url(img.jpg);
-    background-size: auto;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 100px;
-}
-
-
-.form_container {
-    width: 900px;
-    height: 800px;
-    display: flex;
-    border-radius: 10px;
-    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
-}
-
-.top {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.writeImg {
-    margin-left: 150px;
-    width: 70vw;
-    height: 250px;
-    border-radius: 10px;
-    object-fit: cover;
-}
-
-.writeForm {
-    position: relative;
-}
-
-.writeFormGroup {
-    margin-left: 150px;
-    margin-right: 150px;
-    display: flex;
-    align-items: center;
-}
-
-.writeIcon {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    border: 1px solid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    color: rgb(121, 118, 118);
-    cursor: pointer;
-}
-
-.writeInput {
-    outline: none;
-    flex-direction: "row";
-    border: none;
-    width: 500px;
-    padding: 50px;
-    border-radius: 10px;
-    background-color: #edf5f3;
-    margin: 5px 0;
-    font-size: 14px;
-}
-
-    .writeInput:focus {
-        outline: none;
-    }
-
-.writeText {
-    font-size: 20px;
-    height: 100vh;
-}
-
-.writeSubmit {
-    position: absolute;
-    top: 20px;
-    right: 50px;
-    color: white;
-    background-color: teal;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 16px;
-}*/
-
 .write {
     background: url(img.jpg);
     min-height: 1000px;
@@ -101,6 +8,7 @@
 }
 
 .writeImg {
+    margin-top: 50px;
     margin-left: 150px;
     width: 70vw;
     height: 250px;
@@ -110,7 +18,6 @@
 
 .writeForm {
     position: center;
-    margin-top: 50px;
 }
 
 .writeFormGroup {
@@ -146,13 +53,118 @@
 }
 .writeSubmit {
     position: absolute;
-    top: 20px;
+    bottom: 20px;
     right: 50px;
     color: white;
-    background-color: teal;
+    background-color:darkgreen;
     padding: 10px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
+}
+.navbar {
+    width: 100%;
+    height: 70px;
+    background-color: #F6C035;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    z-index: 1;
+}
+
+    .navbar h1 {
+        color: white;
+        font-size: 30px;
+        margin-left: 10px;
+        font-family: Rockwell,Courier Bold,Courier,Georgia,Times,Times New Roman,serif;
+        margin-bottom: 2mm;
+    }
+
+.white_btn {
+    border: none;
+    outline: none;
+    padding: 10px 0;
+    background-color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+
+
+body {
+    height: auto;
+}
+
+.dropdown {
+    width: 200px;
+    user-select: none;
+    position: relative;
+    font-family: system-ui;
+    font-size: 13px;
+    text-align: center;
+    display: inline-block;
+}
+
+    .dropdown .dropdown_btn {
+        padding: 10px 15px;
+        background: #fff;
+        font-weight: bold;
+        color: black;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        justify-content: space-between;
+        border-radius: 15px;
+        align-content: center;
+        text-align: center;
+        opacity: 0.9;
+    }
+
+    .dropdown .dropdown_content {
+        position: absolute;
+        top: 110%;
+        left: 0;
+        padding: 5px;
+        background: #fff;
+        font-weight: bold;
+        box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+        font-weight: 500;
+        color: black;
+        width: 95%;
+        opacity: 0.8;
+    }
+
+        .dropdown .dropdown_content .dropdown_item {
+            padding: 10px;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+            .dropdown .dropdown_content .dropdown_item:hover {
+                background: #f4f4f4;
+            }
+
+.allign1 {
+    position: fixed;
+    top: 18px;
+    right: 150px;
+}
+
+.allign2 {
+    position: fixed;
+    top: 18px;
+    right: 360px;
+}
+
+.carousel {
+    padding: 230px;
+    margin: 0px, 80px, 0px, 0px;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
 }
