dropdown little modifications

--- a/mern-recipes-factory/src/components/WriteRecipe/styles.css
+++ b/mern-recipes-factory/src/components/WriteRecipe/styles.css
@@ -53,6 +53,8 @@
     background-color: antiquewhite;
     border-radius: 15px;
     opacity: 0.9;
+    text-align: center;
+    width: 200px;
 }
             .dropdown .dropdown_content .dropdown_item:hover {
                 background: #f4f4f4;
