--- a/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
+++ b/mern-recipes-factory/src/components/WriteRecipe/writeRecipe.css
@@ -9,7 +9,7 @@
 
 .writeImg {
     margin-top: 50px;
-    margin-left: 250px;
+    margin-left: 280px;
     width: 70vw;
     height: 250px;
     border-radius: 10px;
@@ -17,12 +17,16 @@
 }
 
 .writeForm {
+    bottom: 0;
     position: center;
+    border-radius: 15px;
+    margin-top: 100px;
 }
 
 .writeFormGroup {
-    margin-left: 250px;
+    margin-left: 280px;
     display: flex;
+    bottom:0;
 }
 
 
@@ -31,7 +35,18 @@
     border: none;
     padding: 20px;
     width: 70vw;
-    background-color: antiquewhite;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    bottom:0;
+}
+.writeInput2 {
+    font-size: 10px;
+    border: none;
+    padding: 20px;
+    width: 70vw;
+    background-color: transparent;
+    border-radius: 15px;
+    bottom: 0;
 }
 .writeInput1 {
     font-size: 30px;
@@ -46,7 +61,12 @@
 .writeText {
     font-size: 20px;
     height: 100px;
-    background-color: antiquewhite;
+    background-color: whitesmoke;
+}
+.writeText2 {
+    font-size: 20px;
+    height: 75px;
+    background-color: transparent;
 }
 .writeText1 {
     font-size: 20px;
